--- a/templates/env.j2
+++ b/templates/env.j2
@@ -12,6 +12,15 @@ MAILER_URL={{ kimai_mailer.url }}
 APP_ENV={{ kimai_env }}
 APP_SECRET={{ kimai_secret }}
 
+{% if kimai_trusted_proxies is defined and
+      kimai_trusted_proxies | count > 0 %}
+TRUSTED_PROXIES={{ kimai_trusted_proxies | join(',') }}
+{% endif %}
+{% if kimai_trusted_hosts is defined and
+      kimai_trusted_hosts | count > 0 %}
+TRUSTED_HOSTS={{ kimai_trusted_hosts | join(',') }}
+{% endif %}
+
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 
 {#
